# stmath

./: CMakeLists.txt  LICENSE  README.md
examples/: base.c  main.c
include/: stmath.h
include/stmath/: alg.h  consts.h  core.h  stmath.h
src/: stmath.c
